[gd_scene load_steps=3 format=3 uid="uid://c4q8j7d4y2n8v"]

[ext_resource type="Script" uid="uid://b732d42sg506k" path="res://example/main.gd" id="1_main"]
[ext_resource type="PackedScene" uid="uid://b6x8j7d4y2n8v" path="res://addons/nefn/scenes/debug_console.tscn" id="2_hwn3c"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "NEFN Framework Example"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HostButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Host Game"

[node name="JoinButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Join Game"

[node name="Address" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Server Address"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="VoiceToggle" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
text = "Voice Chat"

[node name="DebugToggle" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
text = "Debug Console"

[node name="Status" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Status: Disconnected"
horizontal_alignment = 1

[node name="DebugConsole" parent="." instance=ExtResource("2_hwn3c")]
visible = false
layout_mode = 1
